<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView3"
        android:layout_weight="9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/choose_calculation_kind"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/addition"
                        android:id="@+id/button9"
                        android:layout_weight="1"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/subtraction"
                        android:id="@+id/button10"
                        android:layout_weight="1"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/multiplication"
                        android:id="@+id/button11"
                        android:layout_weight="1"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/division"
                        android:id="@+id/button12"
                        android:layout_weight="1"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/choose_level"
                    android:id="@+id/textView22"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/addition"
                        android:id="@+id/textView24"
                        android:gravity="center" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/one_number"
                        android:id="@+id/additionNumberOne"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/two_numbers"
                        android:id="@+id/additionNumberTwo"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/three_numbers"
                        android:id="@+id/additionNumberThree"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/subtraction"
                        android:id="@+id/textView27"
                        android:gravity="center" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/one_number"
                        android:id="@+id/subtractionNumberOne"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/two_numbers"
                        android:id="@+id/subtractionNumberTwo"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/three_numbers"
                        android:id="@+id/subtractionNumberThree"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/multiplication"
                        android:id="@+id/textView28"
                        android:gravity="center" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/one_number"
                        android:id="@+id/multiplicationNumberOne"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/two_numbers"
                        android:id="@+id/multiplicationNumberTwo"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/three_numbers"
                        android:id="@+id/multiplicationNumberThree"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/division"
                        android:id="@+id/textView29"
                        android:gravity="center" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/one_number"
                        android:id="@+id/divisionNumberOne"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/two_numbers"
                        android:id="@+id/divisionNumberTwo"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/three_numbers"
                        android:id="@+id/divisionNumberThree"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/choose_time_kind"
                    android:id="@+id/textView23"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question_amount"
                        android:id="@+id/button19"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/question_time"
                        android:id="@+id/button20"
                        android:background="@drawable/small_button"
                        android:layout_margin="2dp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
