<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/textView4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使い方"
            android:id="@+id/button7"
            android:textSize="20dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="20px"
            android:layout_weight="5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:layout_weight="2"
            android:src="@drawable/settings_button"
            android:onClick="settings" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/practice"
        android:textSize="40dp"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView9"
        android:layout_above="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:id="@+id/button2"
                android:onClick="addition"
                android:textSize="30dp"
                android:background="@drawable/square"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtraction"
                android:id="@+id/button3"
                android:onClick="subtraction"
                android:textSize="30dp"
                android:background="@drawable/square"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplication"
                android:textSize="30dp"
                android:background="@drawable/square"
                android:id="@+id/button6"
                android:onClick="multiplication"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:id="@+id/button5"
                android:background="@drawable/square"
                android:textSize="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="division" />

        </LinearLayout>
    </ScrollView>

    <!--<ImageView-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:id="@+id/imageView8"-->
        <!--android:src="@drawable/setting_button"-->
        <!--android:onClick="setting"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

</RelativeLayout>
